feat: update full config of build pipline

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,10 +8,13 @@ on:
       - 'main'
       - 'release-*'
       - 'FE-*'
+      - '*-feature-*'
       - 'BF-*'
+      - '*-bug-*'
       - 'PU-*'
       - 'DOC-*'
-      - 'hotfix-*'
+      - '*-documentation-*'
+      - '*-hotfix-*'
     tags:
       - '*' # Push events to matching *, i.e. 1.0.0 v1.0, v20.15.10
   pull_request:
@@ -21,13 +24,13 @@ on:
       - opened
       - reopened
       - closed
-    branches:
-      - 'main'
-      - 'release-*'
-      - 'DOC-*'
-      - 'hotfix-*'
+    # branches:
+    #   - 'main'
+    #   - 'release-*'
+    #   - 'DOC-*'
+    #   - 'hotfix-*'
 
-permissions:
+permissions: # https://docs.github.com/actions/using-workflows/workflow-syntax-for-github-actions#permissions
   contents: write
   discussions: write
 
@@ -39,15 +42,15 @@ jobs:
   golang-ci:
     name: golang-ci
     needs:
-     - version
+      - version
     uses: ./.github/workflows/golang-ci.yml
     secrets: inherit
 
   go-build-check-main:
     name: go-build-check-main
     needs:
-     - version
-     - golang-ci
+      - version
+      - golang-ci
     if: ${{ ( github.event_name == 'push' && github.ref == 'refs/heads/main' ) || github.base_ref == 'main' }}
     uses: ./.github/workflows/go-release-platform.yml
     secrets: inherit
@@ -57,14 +60,14 @@ jobs:
   go-release-platform:
     name: go-release-platform
     needs:
-     - version
-     - golang-ci
+      - version
+      - golang-ci
     if: startsWith(github.ref, 'refs/tags/')
     uses: ./.github/workflows/go-release-platform.yml
     secrets: inherit
     with:
       version_name: ${{ needs.version.outputs.tag_name }}
-      upload_artifact_name: go-release
+      # upload_artifact_name: go-release
 
   deploy-tag:
     needs:
@@ -75,7 +78,8 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/')
     secrets: inherit
     with:
+      dry_run: false # open/close dry run
       prerelease: true
       tag_name: ${{ needs.version.outputs.tag_name }}
       tag_changes: ${{ needs.version.outputs.cc_changes }}
-      download_artifact_name: go-release
+      # download_artifact_name: go-release # download artifact name, download from actions/upload-artifact, as: {download_artifact_name}-{tag_name}-*, empty is not download
