--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,12 +10,10 @@ updates:
     schedule:
       interval: "monthly"
       day: "sunday"
-    open-pull-requests-limit: 10
-  - package-ecosystem: "gomod"
-    directory: "/"
-    schedule:
-      interval: "weekly"
-      day: "sunday"
+    commit-message:
+      prefix: "build(action)"
+      prefix-development: "build(action-dev)"
+      # include: "scope"
     open-pull-requests-limit: 10
 #    ignore:
 #    - dependency-name: foo
